# ic-lightclient

./: Cargo.toml  README.md  canister_ids.json  config.toml  dfx.json  jest.config.js  oraclekit.toml  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.github/workflows/: release.yml  test.yml
scripts/test/: e2e.bash
src/canister/: Cargo.toml  canister.did
src/canister/src/: blueprint.rs  chain.rs  config.rs  lib.rs  metrics.rs  parameter.rs  state.rs
src/canister/src/chain/: chain.rs  config.rs  factory.rs  mod.rs  state.rs
src/canister/src/ethereum/: checkpoint.rs  config.rs  mod.rs  state.rs
src/canister/src/outcalls/: config.rs  mod.rs  state.rs
src/ethereum/: Cargo.toml
src/ethereum/src/: checkpoint.rs  config.rs  consensus.rs  lib.rs  parameters.rs  payload.rs  proof.rs  utils.rs
src/ethereum/src/helios/: consensus.rs  errors.rs  mod.rs  proof.rs  spec.rs  utils.rs
src/ethereum/src/helios/types/: bls.rs  bytes.rs  mod.rs  serde_utils.rs
src/ethereum/src/payload/: header.rs  mod.rs  utils.rs
src/ethereum/src/types/: bls.rs  mod.rs
src/ic-lightclient-backend/: Cargo.toml
src/oc-agent/: Cargo.toml
src/oc-agent/src/: blueprint.rs  chain.rs  cli.rs  config.rs  ethereum.rs  http.rs  icp.rs  main.rs
src/oc-agent/src/chain/: chain.rs  manager.rs  mod.rs  traits.rs
src/oc-agent/src/ethereum/: diff.rs  mod.rs
src/oc-agent/src/ethereum/api/: consensus.rs  execution.rs  mod.rs
src/oc-agent/src/outcalls/: mod.rs
src/oc-agent/src/util/: blockstore.rs  circular_queue.rs  fixed_queue.rs  mod.rs
src/oc-agent/src/util/api/: execution.rs
src/oc-utils/: Cargo.toml
src/oc-utils/src/: icp.rs  lib.rs
src/test/: index.test.ts  index.ts  process.ts
src/test/components/: canister.ts  dfx.ts  oc-agent.ts
src/test/process/: index.ts
src/tool/: Cargo.toml
src/tool/src/: main.rs
src/types/: Cargo.toml
src/types/src/: config.rs  lib.rs  traits.rs
src/utils/: Cargo.toml
src/utils/src/: circular_queue.rs  lib.rs
src/wire/: Cargo.toml
src/wire/src/: ethereum.rs  lib.rs  outcalls.rs  protocol.rs  state.rs  update.rs
src/wire/src/ethereum/: common.rs  lightclient.rs  mod.rs  outcalls.rs
