[workspace]
members = [
    "src/oc-agent",
    "src/canister",
    "src/ethereum",
    "src/oc-utils",
    "src/tool",
    "src/wire",
    "src/utils"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["raw_value"] }
toml = "0.8.20"
anyhow = "1.0.100"
eyre = "0.6.12"
thiserror = "2.0.12"

# Alloy dependencies
alloy-primitives = { version = "1.0.0", features = ["serde"] }
alloy-rpc-types-eth = "0.14.0"
alloy-consensus = "0.14.0"

# Internet Computer dependencies
candid = "0.10"
ic-agent = "0.40.0"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-utils = "0.40.0"
ic_principal = "0.1.1"
ic_bls12_381 = { version = "0.10.0", default-features = false, features = ["groups", "pairings", "alloc", "experimental", "zeroize"] }

# Ethereum dependencies
ethereum_ssz = "0.9.0"
ethereum_ssz_derive = "0.9.0"
ssz_types = "0.11.0"
tree_hash = "0.10.0"
tree_hash_derive = "0.10.0"

# Other dependencies
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
clap = { version = "4.5.48", features = ["derive"] }
enum_dispatch = "0.3.13"
bincode = "2.0.1"
getrandom = { version = "0.2.15", features = ["custom"] }
sha2 = "0.10.8"
superstruct = "0.8.0"
typenum = "1.18.0"

async-trait = "0.1.89"
