[package]
name = "ic-lightclient-canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ic-lightclient-types = { path = "../types" }
ic-lightclient-ethereum = { path = "../ethereum" }
enum_dispatch = "0.3.13"
toml = "0.8.20"