[package]
name = "ic-lightclient-ethereum"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2.15", features = ["custom"] }
ethereum_ssz = "0.8.3"
ethereum_ssz_derive = "0.8.3"
ssz_types = "0.10.1"
tree_hash = "0.9.1"
tree_hash_derive = "0.9.1"
alloy-primitives = { version = "0.8.0", features = ["serde"] }
eyre = "0.6.12"
serde = "1.0.219"
superstruct = "0.8.0"
typenum = "1.18.0"
ic_bls12_381 = "0.10.1"
bls12_381 = { version = "0.8.0", features = ["experimental"] }
sha2 = "0.9"
