[package]
name = "ic-lightclient-ethereum"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
ssz_types.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
serde.workspace = true
superstruct.workspace = true
typenum.workspace = true
sha2.workspace = true
ic_bls12_381.workspace = true
thiserror.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
bincode.workspace = true
serde_json.workspace = true
