[package]
name = "ic-lightclient-oc-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
ic-agent.workspace = true
serde.workspace = true
toml.workspace = true
alloy-primitives.workspace = true
ic-utils.workspace = true
reqwest.workspace = true
alloy-rpc-types-eth.workspace = true
ic-lightclient-ethereum = { path = "../ethereum" }
ic-lightclient-wire = { path = "../wire" }
ic-lightclient-oc-utils = { path = "../oc-utils" }
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
async-trait.workspace = true