[package]
name = "ic-lightclient-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
ic-lightclient-ethereum = { path = "../ethereum" }
ic-lightclient-oc-utils = { path = "../oc-utils" }
ic-lightclient-wire = { path = "../wire" }